--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
@@ -1067,7 +1071,9 @@
                     3. How does Osumare measure campaign success?
                   </div>
                   <div class="ifa-solid">
-                    <div class="symbol1"></div>
+                    <div class="symbol1">
+                      <i class="fa-solid fa-angle-up"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1078,7 +1084,9 @@
                       3. How does Osumare measure campaign success?
                     </div>
                     <div class="ifa-solid1">
-                      <div class="symbol2"></div>
+                      <div class="symbol2">
+                        <i class="fa-solid fa-angle-up"></i>
+                      </div>
                     </div>
                   </div>
                   <div class="p1"></div>
@@ -1091,7 +1099,9 @@
                       3. How does Osumare measure campaign success?
                     </div>
                     <div class="ifa-solid2">
-                      <div class="symbol3"></div>
+                      <div class="symbol3">
+                        <i class="fa-solid fa-angle-up"></i>
+                      </div>
                     </div>
                   </div>
                   <div class="p2"></div>
